[tool.poetry]
name = "dat"
version = "0.1.0"
description = "Database of Applications of Topology"
authors = ["Bastian Rieck <bastian@rieck.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
bibtexparser = "^1.3.0"
Sphinx = "^5.1.1"
nameparser = "^1.1.1"
titlecase = "^2.4"
Flask = "^2.2.2"
pyzotero = "^1.5.5"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
