[tool.poetry]
name = "donut"
version = "0.1.0"
description = "Database of Original and Novel Uses of Topology"
authors = ["Bastian Rieck <bastian@rieck.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
bibtexparser = "^1.3.0"
Sphinx = "^5.1.1"
nameparser = "^1.1.1"
titlecase = "^2.4"
Flask = "^2.2.2"
pyzotero = "^1.5.5"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
unidecode = "^1.3.6"
python-dateutil = "^2.8.2"
nltk = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=79
